[package]
name = "blockchain_demo1"
version = "0.1.0"
edition = "2024"


[dependencies]
sha2 = "0.9.1" #哈希算法
rust-crypto = "^0.2" #加密库
bincode = "1.3.1" #序列化工具
failure = "0.1.8" #错误处理
chrono = "0.4"
sled = "0.34"
serde = {version ="1.0", features =["derive"]}
log = "0.4"
env_logger = "0.7.1"
clap = "~2.33" #解析命令行